# gomoku-ai

./: README.md  main.py  requirements.txt
cpp/: .gitignore  CMakeLists.txt
cpp/include/: Board2_0.h  Game.h  Patterns.hpp  Scene.h  Scene.hpp  Startup.hpp  Token.h  Token.hpp  board.hpp  game.hpp  gomoku.hpp  mainwindow.h  mainwindow.hpp  windialog.hpp
cpp/src/: Game.cpp  Patterns.cpp  Scene.cpp  Startup.cpp  Startup.ui  Token.cpp  ai.cpp  board.cpp  game.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  windialog.cpp  windialog.ui
cpp/tests/: test_extract.cpp
gomoku/: ai.py  board.py  board_analyzer.py  game.py  utils.py  vec2.py
images/: pieces.kra
src/: game.py
